apps/web/src/styles/components/overrides/modal.css
.fr-modal {
  .fr-modal__header {
    .fr-btn.fr-btn--close {
      font-weight: 400;
    }
  }
}

.fr-modal--overflow-visible {
  .fr-container {
    overflow: visible !important;
  }

  .fr-modal__body {
    overflow-y: auto !important;

    @media (min-width: 768px) {
      overflow-y: visible !important;
    }
  }

  .fr-modal__content {
    @media (min-width: 768px) {
      padding-bottom: 2rem;
    }
  }

  @media (max-height: 768px) {
    .fr-modal__body {
      overflow-y: scroll !important;
    }

    .fr-modal__content {
      padding-bottom: 0;
      margin-bottom: 2rem;
    }
  }
}

